--- a/math/advanced-mathematics/limits_and_continuity_of_functions/computation_of_function_limits.tex
+++ b/math/advanced-mathematics/limits_and_continuity_of_functions/computation_of_function_limits.tex
@@ -274,7 +274,7 @@
             \lim_{x \to 0^+} x^\alpha
             = 0.
         \]
-        一般形式: $\lim\limits_{x\to 0^+} x^\alpha\ln^\beta x = 0$，其中$\alpha, \beta > 0$
+        一般形式: $\lim\limits_{x\to 0^+} x^\alpha\ln^\beta x = 0$，其中$\alpha, \beta > 0$。{\color{red}{思考}}：当$x\to +\infty$
         \item $\text{狗} - 1 < [\text{狗}] \leq \text{狗}$
     \end{enumerate}
 
