--- a/english/word/low-frequency/049-054.md
+++ b/english/word/low-frequency/049-054.md
@@ -128,7 +128,7 @@
     - upskill vt. 通过培训等方式学习其它的工作技能
 - groan [ɡroʊn]
     - vi. 抱怨
-    - groan about
+    - groan about 抱怨某事；对...唉声叹气
 
 ## 053
 
@@ -155,7 +155,7 @@
     - n. 宝库
 - automotive [ˌɔtəˈmoʊtɪv]
     - adj. 汽车的
-- broaden
+- broaden [ˈbrɔːdn]
     - v. 增长
     - broaden career options 拓宽职业选择
 
@@ -183,8 +183,9 @@
     - adj. 含糖的
 - reckless [ˈrekləs]
     - adj. 不顾后果的
+    - reck [rek] v. 顾虑
 - liability [ˌlaɪəˈbɪləti]
-    - n. (pl.)债务
+    - n. (pl.)债务；责任
 
 ## Words
 
