--- a/english/word/low-frequency/091-096.md
+++ b/english/word/low-frequency/091-096.md
@@ -22,47 +22,46 @@
 - recreate
     - vt. 再现
     - recreation n. 娱乐
-- albeit
+- albeit [ˌɔːlˈbiːɪt]
     - conj. 尽管
     - He finally agreed, **albeit** reluctantly, to help us.
-- supplier
+- supplier [səˈplaɪər]
     - n. 供货商
-- oxide
+- oxide [ˈɑːksaɪd]
     - n. 氧化物
     - carbon di**oxide** 二氧化碳
-- vulnerability
+- vulnerability [ˌvʌlnərə'bɪləti]
     - n. 易损性
     - A baby is <ins>the embodiment of(...的化身)</ins> **vulnerability**.
         - embodiment n. 集中体现
     - vulnerable [ˈvʌlnərəbl] adj. 脆弱的；易受伤害的
 - unnamed
     - adj. 不知其名的
-- stern
+- stern [stɜːrn]
     - adj. 严厉的
-- demonstration
+- demonstration [ˌdemənˈstreɪʃn]
     - n. 展示
-- rivalry
+- rivalry [ˈraɪvlri]
     - n. 竞争
     - == competition [ˌkɑːmpəˈtɪʃn] n. 竞争
 
 ## 092
 
-- promoter
+- promoter [prəˈmoʊtə(r)]
     - n. 倡导者
-- staircase
+- staircase [ˈsterkeɪs]
     - n. （建筑物内的）楼梯
-- alteration
+- alteration [ˌɔːltəˈreɪʃn]
     - n. 改动
     - alter v. 更改
-- physiology
+- physiology [ˌfɪziˈɑːlədʒi]
     - n. 生理机能
-    - physiologist n. 生理学家
-    - psychology n. 心理学
-- comprise
+    - physiologist [ˌfɪziˈɑːlədʒɪst] n. 生理学家
+    - psychology [saɪˈkɑːlədʒi] n. 心理学
+- comprise [kəmˈpraɪz]
     - vt. 由...组成
     - == be made up of
     - Older people **comprise** a large proportion of those living in poverty.
-    - comprise of
 - habitation
     - n. 住所
 - relevance
@@ -71,112 +70,121 @@
     - Politicians' private lives have no **relevance** to their public roles.
 - packet
     - n. 一大笔钱
-- contemptible
-    - adj. 可鄙的
+- contemptible [kənˈtemptəbl]
+    - adj. 卑劣的，可鄙的
 
 ## 093
 
-- satire
+- satire [ˈsætaɪər]
     - n. 讽刺
-    - stairist n. 讽刺作家
-- nuisance
+    - satirist [ˈsætərɪst] n. 讽刺作家
+- nuisance [ˈnuːsns]
     - n. 妨害行为
-- harmony
+- harmony [ˈhɑːrməni]
     - n. (音乐)和声；融洽
-    - be harmony with
-- purifier
+    - be in harmony with 与...和谐/协调/一致
+- purifier [ˈpjʊrɪfaɪə(r)]
     - n. 净化器
     - pure [pjʊr] n. 纯的，纯洁的；纯净的；抽象的；完全的，十足的
-- integration
+- integration [ˌɪntɪˈɡreʃən]
     - n. 融合
     - disintegrate vi. 分解
-    - disintegration n. 解体
+    - disintegration
+        - n. 解体
         - save sth. from disintegration 拯救...免于解体
 - dependence
     - n. 依赖
     - interdependence n. 互相依赖
     - This entails reducing our **dependence** on the North American market...
-- sin
+        - entail
+            - vt. 需要；牵涉；意味着
+            - v. 使必要，需要
+            - n. 限定继承
+            - == involve vt. 牵涉；使参与；需要
+- sin [sɪn]
     - n. 罪
 
 ## 094
 
-- bureaucrat
+- bureaucrat [ˈbjʊrəkræt]
     - n. 官僚
-    - bureaucracy n. 官僚体制；官僚作风
-    - A **bureaucracy** is an organization made up of many departments and divisions that are administered by lots of
-      People.
-    - If you've ever had to deal with health insurance or financial aid, you're familiar with the dark side of
-      **bureaucracy**.
-- escapism
+    - bureaucracy [bjʊˈrɑːkrəsi]
+        - n. 官僚体制；官僚作风
+        - A **bureaucracy** is an organization made up of many departments and divisions that are administered by lots
+          of people.
+            - division [dɪˈvɪʒn] n. 分配
+            - administer vt. 管理；施行
+        - If you've ever had to deal with health insurance or financial aid, you're familiar with the dark side of
+          **bureaucracy**.
+- escapism [ɪˈskeˌpɪzəm]
     - n. 逃避主义
-- ingredient
+- ingredient [ɪnˈɡriːdiənt]
     - n. 食材
 - falsehood
     - n. 虚假的话
-- summon
+- summon [ˈsʌmən]
     - vt. 召唤
-- assembly
+- assembly [əˈsembli]
     - n. 组装；议会；集会
     - assemble v. 集合，集结
-- entitlement
+- entitlement [ɛnˈtaɪtlmənt]
     - n. 权力
-- reawaken
+- reawaken [ˌriːəˈweɪkən]
     - vt. 重新唤起
-- underestimation
+- underestimation [ˌʌndərˌestɪ'meɪʃn]
     - n. 低估
-    - overestimation n. 高估
+    - overestimation [oʊvərˌestɪ'meɪʃn] n. 高估
 
 ## 095
 
-- adaptation
+- adaptation [ˌædæpˈteɪʃn]
     - n. 适应
     - adaptive adj. 有适应能力的
     - adapt to 适应
-- lifeblood
+- lifeblood [ˈlaɪfˌblʌd]
     - n. 命脉
     - Tourism is the **lifeblood** of the city.
 - unthinkable
     - adj. 难以想象的
-- poke
+- poke [poʊk]
     - v. 戳
-- glamorous
+- glamorous [ˈɡlæmərəs]
     - adj. 有魅力的
-- initiator
+- initiator [ɪˈnɪʃieɪtər]
     - n. 发起人
-- spacious
+- spacious [ˈspeɪʃəs]
     - adj. 宽敞的
-- suck
+- suck [sʌk]
     - v. 吸
     - Tech is designed to really **suck** you in.
         - suck in 吸引
-- threshold
+- threshold [ˈθreʃhoʊld]
     - n. 门槛
     - setting a high age **threshold** for models.
 
 ## 096
 
-- issuer
+- issuer [ˈɪʃuːər]
     - n. 发行人
-- sneak
+- sneak [sniːk]
     - vt. 偷偷携带
-- ecologically
+- ecologically [ˌikə'lɒdʒɪklɪ]
     - adv. 从生态的观点看
     - ecology [iˈkɑːlədʒi] n. 生态，生态学
-- instantaneous
+- instantaneous [ˌɪnstənˈteɪniəs]
     - adj. 即时的
-- centrepiece
+- centrepiece [ˈsentərpiːs]
     - n. 最重要的部分
-- utterly
+- utterly [ˈʌtərli]
     - adv. 完全地
-- misguide
+- misguide [mɪs'gaɪd]
     - vt. 带错方向
     - misguided adj. 错误的
-- tile
+- tile [taɪl]
     - vt. 铺地砖
     - I am writing to recommend the Forbidden City, every brick and **tile** of which embodies the craftsmanship spirit
       of our country. 我写信是为了推荐故宫，故宫里的一砖一瓦都体现了我们国家的工匠精神。
-- bribe
+- bribe [braɪb]
     - vt. 贿赂
 
 ## Words
