--- a/english/word/low-frequency/067-072.md
+++ b/english/word/low-frequency/067-072.md
@@ -154,8 +154,8 @@
     - vt. 朗诵
 - devise
     - vt. 设计
-    - Since the dawn of human *ingenuity([ˌɪndʒəˈnuːəti] )*, people have **devised** ever more cunning tools to cope
-      with work that is dangerous, boring, burdensome, or just plain *nasty([ˈnæsti] adj. 令人讨厌的)* .
+    - Since the dawn of human *ingenuity([ˌɪndʒəˈnuːəti] n. 足智多谋，心灵手巧; 独创性)*, people have **devised** ever
+      more cunning tools to cope with work that is dangerous, boring, burdensome, or just plain *nasty([ˈnæsti] adj. 令人讨厌的)* .
         - dawn [dɔːn]
             - n. 黎明，拂晓；开端，开始
             - v. 破晓；开始；出现
