--- a/english/word/low-frequency/097-102.md
+++ b/english/word/low-frequency/097-102.md
@@ -1,4 +1,4 @@
-# 097-104
+# 097-102
 
 - 感情色彩正向: 🙂
 - 感情色彩负向: 😔
@@ -23,20 +23,25 @@
     - adj. 富有革新精神的
     - innovatively adv. 创新地
     - innovator n. 革新者
-    - innovation n. 创新
+    - innovation
+        - n. 创新；革新；新思想；新想法
+        - **Innovation** is the ability to see change as an opportunity—not a threat.
 - dispatch
     - vt. 派遣
 - contextual
     - adj. 上下文的
     - contextualize vt. 将...置于背景中考虑
-    - context n. 上下文，语境
+    - context
+        - n. 背景；语境
+        - Meaning is **context** bound, but **context** is boundless.
 - restoration
     - n. 修复
 - murmur
     - v. 小声说
 - puff
     - v. 气喘吁吁
-    - There is as much joy over a <ins>puffed-out (气喘吁吁)</ins> first-timer being <ins>clapped (鼓掌)</ins> over the line as there is about top talent shining.
+    - There is as much joy over a **puffed-out** first-timer being *clapped(v. 鼓掌)* over the
+      line as there is about top talent shining.
 - purchaser
     - n. 购买人
 
@@ -52,18 +57,25 @@
     - vt. 举例说明
 - diligence
     - n. 勤奋
-    - hardworking == diligent 勤奋的
+    - diligent [ˈdɪlɪdʒənt]
+        - adj. 勤奋的，勤勉的
+        - == hardworking
 - abuse
+    - vt. 滥用
     - n. 滥用
 - poisonous
     - adj. 有毒的
 - induce
     - vt. 引起
-    - Taking a brisk walk can often <ins>induce (== cause)</ins> a feeling of well-being.
+    - == cause v. 导致
+    - Taking a brisk walk can often **induce** a feeling of well-being.
     - inducement n. 引诱物
 - faulty
     - adj. （思维方法）错误的
-    - Faulty approach to homework. 错误的家庭作业方法
+    - fault
+        - vt. 挑剔，指责
+        - n. 缺点；错误；故障
+    - A **Faulty** Approach to Homework. 错误的家庭作业方法
 
 ## 099
 
@@ -71,7 +83,8 @@
     - adj. 仪式的
 - panorama
     - n. 全貌
-    - see the big picture == see the panorama 看见全貌
+    - see the big picture 看见全貌
+        - == see the panorama
 - misadjusted
     - adj. 失调的
 - standstill
@@ -88,13 +101,16 @@
     - vt. 延长
 - grimly 😔
     - adv. 可怕的
-    - It has become a grimly reliable <ins>annual ritual (仪式，惯例)</ins>:every January the cost of travelling by train rises...
+    - It has become a **grimly** reliable <ins>annual ritual(仪式，惯例)</ins>:every January the cost of travelling by
+      train rises...
 
 ## 100
 
 - retrospect
     - n. 回顾
     - in retrospect 回顾往事
+    - Travel is glamorous only in **retrospect**.
+        - glamorous [ˈɡlæmərəs] adj. 有魅力的
 - inject
     - vt. 注射（药物）
 - competitiveness
@@ -104,11 +120,10 @@
     - adj. 建设性的
 - hamper
     - vt. 阻碍
-    - stop
-    - hinder
+    - hinder [ˈhɪndər] vt. 阻碍
 - preservation
     - n. 保存
-    - preserve
+    - preserve [prɪˈzɜːrv] vt. 维护；保护
 - reportedly
     - adv. 据报道
 - magnetic
@@ -125,7 +140,7 @@
     - vt. 雕刻
 - oceanic
     - adj. 海洋的
-    - ocean n. 海洋
+    - ocean [ˈoʊʃn] n. 海洋；(pl.)大量，许多(oceans of)
 - shorten
     - v. （使）变短
 - hospitality
@@ -138,10 +153,10 @@
     - adv. 心理上地
 - envisage
     - vt. 展望
-    - == imagine == envision
+    - == imagine == envision vt. 设想
 - fantasise
     - v. 想象
-    - fantasy n. 想象出来的场景
+    - fantasy [ˈfæntəsi] n. 幻想；虚幻的
 
 ## 102
 
@@ -163,58 +178,16 @@
     - n. 注视
 - eclipse
     - vt. 使失色
-    - Her work was in eclipse for most of the 20th century.
-    - With the Church's teachings and ways of thinking being eclipsed by the Renaissance...随着教会的教义和思维方式因文艺复兴的出现而黯然失色
-
-## 103
-
-- misapply
-    - vt. 误用
-- insincere
-    - adj. 不诚恳的
-- suspension
-    - n. 暂停
-- admirable
-    - adj. 令人钦佩的
-    - admiration n. 钦佩
-- outsize
-    - adj. 较大的
-    - oversize adj. 特别大的
-- coder
-    - n. 编程人员
-- wasteful
-    - adj. 挥霍的
-- rigorous
-    - adj. 严格的
-    - strict
-
-## 104
-
-- contrive
-    - vt. 谋划
-    - I decided to contrive a meeting between the two of them.
-    - plan
-- fabulous
-    - adj. 极好的
-- cable
-    - n. 有线电视
-- bruising
-    - adj. 艰难的
-    - After a bruising encounter with Congress,America's Financial Accounting Standards Board rushed through rule changes.
-- understandably
-    - adv. 可以理解地
-- absued
-    - adj. 荒唐的
-- numerical
-    - adj. 数字的
-- deliciously
-    - adv. 非常地
-- inhale
-    - v. 吸入（空气，烟雾或气体等）
-- illegally
-    - adv. 非法地
+    - Her work was in **eclipse** for most of the 20th century.
+    - With the Church's teachings and ways of thinking being **eclipsed** by the Renaissance...
+      随着教会的教义和思维方式因文艺复兴的出现而黯然失色
 
 ## Words
+
+- accountable
+    - adj. 对...负有责任的
+- sear [sɪr]
+    - vt. 烧焦
 
 ## 词组
 
