--- a/english/word/low-frequency/103-108.md
+++ b/english/word/low-frequency/103-108.md
@@ -1,4 +1,4 @@
-# 105-112
+# 103-108
 
 - 感情色彩正向: 🙂
 - 感情色彩负向: 😔
@@ -16,6 +16,55 @@
 - 破折号: —
 - C: Cause
 - R: Result
+
+## 103
+
+- misapply
+    - vt. 误用
+- insincere
+    - adj. 不诚恳的
+- suspension
+    - n. 暂停
+- admirable
+    - adj. 令人钦佩的
+    - admiration n. 钦佩
+- outsize
+    - adj. 较大的
+    - oversize adj. 特别大的
+- coder
+    - n. 编程人员
+- wasteful
+    - adj. 挥霍的
+- rigorous
+    - adj. 严格的
+    - strict
+
+## 104
+
+- contrive
+    - vt. 谋划
+    - I decided to contrive a meeting between the two of them.
+    - plan
+- fabulous
+    - adj. 极好的
+- cable
+    - n. 有线电视
+- bruising
+    - adj. 艰难的
+    - After a bruising encounter with Congress,America's Financial Accounting Standards Board rushed through rule
+      changes.
+- understandably
+    - adv. 可以理解地
+- absued
+    - adj. 荒唐的
+- numerical
+    - adj. 数字的
+- deliciously
+    - adv. 非常地
+- inhale
+    - v. 吸入（空气，烟雾或气体等）
+- illegally
+    - adv. 非法地
 
 ## 105
 
@@ -71,7 +120,8 @@
     - adj. 一致同意的
     - in a rare unanimous ruling 在罕见的一致的裁决中
         - verdict == ruling 裁决
-        - In a rare unanimous ruling，the US Supreme Court has **overturned** the <ins>corruption conviction (贪污定罪)</ins> of <ins>former (前者)</ins> Virginia governor，Robert McDonnell.
+        - In a rare unanimous ruling，the US Supreme Court has **overturned** the <ins>corruption conviction (
+          贪污定罪)</ins> of <ins>former (前者)</ins> Virginia governor，Robert McDonnell.
     - anonymous(匿名) vs unanimous
         - The vote was__
         - You can remain__if you wish.
@@ -127,7 +177,8 @@
 - dismissal
     - n. 解雇
     - pink slip 解雇通知单
-    - Now a pink slip,a bad diagnosis,or a disappearing spouse can <ins>reduce (沦落到)</ins> a family from solidly middle class to newly poor in a few months.
+    - Now a pink slip,a bad diagnosis,or a disappearing spouse can <ins>reduce (沦落到)</ins> a family from solidly
+      middle class to newly poor in a few months.
 - stagnation
     - n. 停滞
     - recession/depression/slow down
@@ -138,118 +189,7 @@
 - imprison
     - vt. 监禁
 
-## 109
-
-- stalk
-    - v. 偷偷接近
-- **remodel**
-    - vt. 改变...的形状（或结构）
-- mortal
-    - n. 平民百姓； adj. 终有一死的
-- intermittently
-    - adv. 间歇地
-- inhibit
-    - vt. 阻止，妨碍
-    - preclude
-    - curb
-    - dampen
-- sculpture
-    - n. 雕塑
-- faint
-    - adj. 轻微的
-- defendable
-    - adj. 可防御的
-    - defensible adj. （想法，行为等）合理的
-    - defense 捍卫，防守
-    - defendant n. 被告
-- renovate
-    - vt. 修复
-    - innovate 创新
-
-## 110
-
-- spiritual
-    - adj. 精神的
-- interim
-    - adj. 临时的
-- retention
-    - n. 保留
-- advocacy
-    - n. 游说（组织）；提倡
-    - advocate v. 游说，倡导
-- scrape
-    - v. v. 用程序从网上下载（数据）
-- humility
-    - n. 谦逊
-- newlywed
-    - .新婚夫妇
-    - wedding
-- shatter
-    - v. 使粉碎
-- temperament
-    - n. 脾气
-- representational
-    - adj. 具象派的
-    - representative n. 代表；众议院
-
-## 111
-
-- biomedical
-    - adj. 生物医学的
-- wholeheartedly
-    - adv. 全心全意地
-- diagnosis
-    - n. 诊断
-    - diagnostic adj. 诊断的
-- **deference**
-    - n. 尊敬
-    - absence of deference 缺乏尊重
-    - deferential adj. 恭敬的
-    - defer- 拿
-- racial
-    - adj. 种族的
-    - racial discrimination 种族歧视
-- overfish
-    - v. 过度捕捞
-- celebration
-    - n. 庆祝
-- constitutionality
-    - n. 符合宪法
-    - constitution n. 宪法
-    - unconstitutionality 违反宪法
-
-## 112
-
-- assimilate
-    - v. 使同化；vt. 透彻理解
-    - assimilative adj. 同化的
-- rifle
-    - vt. 迅速翻找
-    - rifle through
-- saturate
-    - vt. 使充满
-- indefinite
-    - adj. 不确定的；无限期的
-    - == uncertain
-    - define v. 下定义，确定的，有限的
-- quotation
-    - n. 引文
-- publicise/-ize
-    - vt. 宣传
-- stall
-    - n. [pl.] （剧场的）正厅前座区
-- adverse
-    - adj. 不利的
-    - It is argued that the influence of transient investment on public companies can be **adverse**.
-- transformative
-    - adj. 有改革能力的
-
 ## Words
-
-- cozy
-    - == comfortable
-- propel
-    - 推进
 
 ## 词组
 
