--- a/english/word/simple-word/markdown/p55-p58.md
+++ b/english/word/simple-word/markdown/p55-p58.md
@@ -34,7 +34,7 @@
     - n. 桨
 - **documentary**
     - n. 纪录片； adj. 记录的
-- **fault**
+- fault
     - n. 缺点；错误；故障； vt. 挑剔，指责
     - With all her faults I still love her.
     - fail
