--- a/english/word/low-frequency/115-118.md
+++ b/english/word/low-frequency/115-118.md
@@ -1,4 +1,4 @@
-# 113-118
+# 115-118
 
 - 感情色彩正向: 🙂
 - 感情色彩负向: 😔
@@ -16,71 +16,6 @@
 - 破折号: —
 - C: Cause
 - R: Result
-
-## 113
-
-- shortfall
-    - n. 不足
-    - make up for that shortfall 弥补不足
-- roadblock
-    - n. 障碍物
-- precision
-    - n. 精准性
-- serially
-    - adv. 连载地
-- forefront
-    - n. (运动、活动的)前沿
-    - at/in/to the forefront of 在...的最前沿
-- combative
-    - adj. 好斗的
-    - combat 对抗
-- crude
-    - adj. 简陋的
-- interface
-    - n. 界面（尤指屏幕布局和菜单）
-    - the user interface 用户界面
-- resolute
-    - adj. 坚定的
-    - resolute determination 坚定的决心
-    - Voters perceive him as a decisive and resolute international leader.
-- monotonous
-    - adj. 单调的
-    - the same monotonous beats 同样单调的节拍
-    - When I was young,I was often <ins>in monotonous and tiresome situations. (无聊疲乏的状态)</ins>
-    - monologue n. 独白
-        - mono- == single 单个，一个
-    - dialogue n. 对话
-
-## 114
-
-- enclose
-    - vt. 围住
-    - enclosure n. 圈用地
-    - en- 使动
-- surge
-    - n. 汹涌澎湃
-- **transcend**
-    - vt. 超出，超越
-- stroll
-    - vi. 散步
-    - take stroll down
-- treaty
-    - n. 条约
-    - Treaty
-- ascribe
-    - vt. 认为...具有；把...归因于
-    - ascribe meanings to texts 赋予文本含义
-    - ascribe A to B
-    - We **<ins>ascribe(attach)</ins> great importance to**（重视） these policies.
-    - Scholars ascribe the trend to many causes. 归因于
-- breach
-    - vt. 攻破
-    - n. 破坏
-- certify
-    - vt. 证明
-- chunk
-    - n. （语言）话语组成部分
-    - chunks of memorized poetry 大量背诵下来的诗歌
 
 ## 115
 
@@ -164,7 +99,8 @@
     - n. 湿度；潮湿
 - indignant
     - adj. 愤怒的
-    - Feelings of <ins>righteous (正义的)</ins> indignation,it seems,are not the <ins>preserve (n. 专利)</ins> of people alone.
+    - Feelings of <ins>righteous (正义的)</ins> indignation,it seems,are not the <ins>preserve (n. 专利)</ins> of people
+      alone.
     - angry
 - obsolete
     - adj. 废弃的；过时了的
@@ -180,7 +116,8 @@
 - pirate
     - vt. 盗用，非法盗印
     - n. 非法盗印者
-    - But the age of streaming has been a <ins>boom (福音)</ins> for some unintended winners：pirates that use software to rip a film or television show in seconds from legitimate online video platforms...
+    - But the age of streaming has been a <ins>boom (福音)</ins> for some unintended winners：pirates that use software
+      to rip a film or television show in seconds from legitimate online video platforms...
 - pitch
     - vt. 投掷
     - n. 程度
@@ -188,7 +125,8 @@
     - v. 思索，考虑，沉思
 - resilient
     - adj. 有适应力的
-    - Resilience is very different than being numb.Resilience means you experience,you feel you fail,you hurt.You fall.But,you keep going.
+    - Resilience is very different than being numb.Resilience means you experience,you feel you fail,you hurt.You
+      fall.But,you keep going.
 - retrieve
     - vt. 取回
 - submerge
